--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "jeefo_javascript_parser",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "jeefo javascript parser",
-  "author": "je3f0o <je3f0o@gmail.com>",
+  "author": {
+    "name": "je3f0o",
+    "email": "je3f0o@gmail.com"
+  },
   "homepage": "https://github.com/je3f0o/jeefo_javascript_parser",
   "license": "MIT",
   "copyright": "2017",
