--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jeefo_javascript_parser",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "jeefo javascript parser",
   "author": {
     "name": "je3f0o",
@@ -31,8 +31,9 @@
     "uglify-js": "^2.8.22"
   },
   "dependencies": {
-    "jeefo": "^0.0.12",
-    "jeefo_tokenizer": "^0.0.20"
+    "jeefo": "^0.0.13",
+    "jeefo_core": "^0.0.10",
+    "jeefo_tokenizer": "^0.0.21"
   },
   "uglify_config": {
     "mangle": {
