--- a/package.json
+++ b/package.json
@@ -25,16 +25,9 @@
   ],
   "devDependencies": {
     "expect": "^1.20.2",
-    "fs-extra": "^0.30.0",
-    "mocha": "^3.0.2",
-    "pygments": "^0.2.1",
-    "uglify-js": "^2.8.22"
+    "mocha": "^3.5.0"
   },
-  "dependencies": {
-    "jeefo": "^0.0.26",
-    "jeefo_core": "^0.0.17",
-    "jeefo_tokenizer": "^0.0.28"
-  },
+  "dependencies": {},
   "uglify_config": {
     "mangle": {
       "toplevel": true
