--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "copyright": "2017",
   "main": "index.js",
   "scripts": {
+    "test": "./node_modules/mocha/bin/mocha specs/**/*_specs.js",
     "build": "node build"
   },
   "repository": {
