--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jeefo_javascript_parser",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "jeefo javascript parser",
   "author": {
     "name": "je3f0o",
@@ -28,14 +28,7 @@
     "expect": "^1.20.2",
     "mocha": "^3.5.0"
   },
-  "dependencies": {},
-  "uglify_config": {
-    "mangle": {
-      "toplevel": true
-    },
-    "compress": {
-      "comparisons": false
-    },
-    "fromString": true
+  "dependencies": {
+    "jeefo_tokenizer": "^0.0.29"
   }
 }
