--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "@jeefo/ecma_parser",
-  "version": "0.0.0",
-  "description": "Part of jeefo framework.",
-  "author": {
-    "name": "je3f0o",
-    "email": "je3f0o@gmail.com"
-  },
-  "homepage": "https://github.com/je3f0o/jeefo_javascript_parser",
-  "license": "MIT",
-  "copyright": "2017",
-  "main": "index.js",
-  "scripts": {
-    "save": "git add . && git c \"`date`\" && git p",
-    "jeefo_publish": "node node_modules/@jeefo/publish/publish.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/je3f0o/jeefo_javascript_parser.git"
-  },
-  "keywords": [
-    "jeefo",
-    "je3f0o",
-    "token",
-    "parser",
-    "tokenizer",
-    "ECMA Parser"
-  ],
-  "devDependencies": {
-    "expect.js": "^0.3.1",
-    "mocha": "^6.0.2"
-  },
-  "dependencies": {
-    "@jeefo/parser": "0.0.21"
-  }
+    "name": "@jeefo/ecma_parser",
+    "version": "0.0.1",
+    "description": "Part of jeefo framework.",
+    "author": {
+        "name": "je3f0o",
+        "email": "je3f0o@gmail.com"
+    },
+    "homepage": "https://github.com/je3f0o/jeefo_javascript_parser",
+    "license": "MIT",
+    "copyright": "2017",
+    "main": "index.js",
+    "scripts": {
+        "save": "git add . && git c \"`date`\" && git p",
+        "jeefo_publish": "node node_modules/@jeefo/publish/publish.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/je3f0o/jeefo_javascript_parser.git"
+    },
+    "keywords": [
+        "jeefo",
+        "je3f0o",
+        "token",
+        "parser",
+        "tokenizer",
+        "ECMA Parser"
+    ],
+    "devDependencies": {
+        "@jeefo/publish": "0.0.31",
+        "expect.js": "^0.3.1",
+        "mocha": "^6.0.2"
+    },
+    "dependencies": {
+        "@jeefo/parser": "0.0.21"
+    }
 }
