--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jeefo/ecma_parser",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "Part of jeefo framework.",
     "author": {
         "name": "je3f0o",
@@ -17,7 +17,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/je3f0o/jeefo_javascript_parser.git"
+        "url": "git@github.com:je3f0o/jeefo_javascript_parser.git"
     },
     "keywords": [
         "jeefo",
@@ -33,6 +33,6 @@
         "mocha": "^6.0.2"
     },
     "dependencies": {
-        "@jeefo/parser": "0.0.24"
+        "@jeefo/parser": "0.0.25"
     }
 }
