--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     ],
     "devDependencies": {
         "@jeefo/parser": "0.0.25",
-        "@jeefo/publish": "0.0.31",
-        "expect.js": "^0.3.1",
-        "mocha": "^6.0.2"
+        "@jeefo/publish": "0.0.31"
     },
     "dependencies": {}
 }
